--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -14,7 +14,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
@@ -23,17 +23,20 @@
   color: var(--primary);
   padding: 0.5rem 1rem;
 }
-
+.header a{
+  text-decoration: none;
+  color: var(--primary);
+}
 .header .logo {
   width: 3rem;
+  height: 3rem;
   overflow: hidden;
 }
-
 .header .logo img {
-  object-fit: contain;
+  /* object-fit: contain; */
   width: 100%;
+  height: 100%;
 }
-
 .nav {
   display: flex;
   justify-content: space-between;
@@ -50,6 +53,38 @@
   margin: 0 0.25rem;
 }
 
+#accountNumber {
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  outline: none;
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-family: "Merriweather", serif;
+  font-style: italic;
+}
+
+#accountNumber option {
+  background-color: var(--primary);
+  color: #f3f3f3;
+  font-family: "Merriweather", serif;
+  text-align: center;
+}
+
+#accountNumber:focus {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+
+#accountNumber:hover {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+  background-color: white;
+  color: grey;
+}
+
 .feilds {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -62,6 +97,7 @@
   color: var(--primary);
   border-radius: 0.5rem;
   font-family: "Poppins", sans-serif;
+  font-size: 1rem;
 }
 
 .feilds .feild {
@@ -119,10 +155,10 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  flex-wrap: wrap;
 }
-
-.today #date {
-  font-family: "Merriweather", serif;
+.today .heading h2{
+  text-wrap: nowrap;
 }
 
 #entries .entry {
@@ -147,50 +183,6 @@
   font-family: "Merriweather", serif;
   font-weight: 600;
   font-style: italic;
-}
-
-#accountNumber {
-  font-family: "Poppins", sans-serif;
-  border: none;
-  border: 0.25rem solid var(--primary);
-  padding: 0 0.25rem 0.25rem 0.25rem;
-  border-radius: 0.35rem;
-  background-color: var(--primary);
-  color: white;
-  outline: none;
-  cursor: pointer;
-}
-
-#accountNumber {
-  background-color: var(--primary);
-  color: white;
-  border: none;
-  outline: none;
-  padding: 0.25rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  font-family: "Merriweather", serif;
-  font-style: italic;
-}
-
-#accountNumber option {
-  background-color: var(--primary);
-  color: #f3f3f3;
-  font-family: "Merriweather", serif;
-  text-align: center;
-}
-
-#accountNumber:focus {
-  border: none;
-  box-shadow: 0 0 2px 2px var(--color3);
-}
-
-#accountNumber:hover {
-  border: none;
-  box-shadow: 0 0 2px 2px var(--color3);
-  background-color: white;
-  color: grey;
 }
 
 #notification {
@@ -256,11 +248,24 @@
   display: none;
 }
 
-@media only screen and (max-width: 430px) {
-  .header {
-    font-size: 2rem;
+@media only screen and (max-width:720px) {
+  html{
+    font-size: 14px;
   }
+  .header {
+    font-size: 1.5rem;
+  }
+  .header .logo{
+    width: 2rem;
+    height: 2rem;
+  }
+  .feilds {
+    grid-template-columns: 1fr 1fr;
+  }
+  
+}
 
+@media only screen and (max-width: 450px) {
   .nav {
     width: 100%;
     font-size: 0.85rem;
@@ -322,5 +327,18 @@
 
   #accountNumber {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 360px){
+  html{
+    font-size: 10px;
+  }
+  .header{
+    font-size: 1.2rem;
+  }
+  .header .logo{
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
