--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -23,20 +23,24 @@
   color: var(--primary);
   padding: 0.5rem 1rem;
 }
-.header a{
+
+.header a {
   text-decoration: none;
   color: var(--primary);
 }
+
 .header .logo {
   width: 3rem;
   height: 3rem;
   overflow: hidden;
 }
+
 .header .logo img {
   /* object-fit: contain; */
   width: 100%;
   height: 100%;
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -157,11 +161,12 @@
   align-items: baseline;
   flex-wrap: wrap;
 }
-.today .heading h2{
+
+.today .heading h2 {
   text-wrap: nowrap;
 }
 
-.user-info{
+.user-info {
   display: flex;
   font-size: 0.85rem;
   font-family: "Poppins", sans-serif;
@@ -171,15 +176,18 @@
   padding: 0 .25rem;
   border-radius: .25rem;
 }
-.user-info.focus{
+
+.user-info.focus {
   border-bottom: 3px solid var(--primary);
   box-shadow: 0 0 2px 2px var(--color3);
 }
-.user-info .email{
+
+.user-info .email {
   display: flex;
   flex-wrap: nowrap;
 }
-#user{
+
+#user {
   width: 1.5rem;
   height: 1.5rem;
   border: 3px solid transparent;
@@ -190,7 +198,8 @@
   cursor: pointer;
   color: var(--primary);
 }
-#user:hover{
+
+#user:hover {
   border: 3px solid var(--color3);
   background-color: var(--color3);
   color: white;
@@ -231,13 +240,22 @@
   display: none;
   justify-content: space-between;
   font-size: 1.25rem;
-  font-style: italic;
+  font-weight: 700;
 }
-
-#bell {
+#notification #header #close{
+  cursor: pointer;
+}
+#gear {
   cursor: pointer;
   color: var(--primary);
-  font-size: 2rem;
+  font-size: 1.3rem;
+  opacity: 0.7;
+  transition: all .3s ease;
+}
+
+#gear:hover {
+  transform: scale(1.1);
+  opacity: 1;
 }
 
 #notification_badge {
@@ -258,19 +276,50 @@
   flex-direction: column;
   font-family: "Poppins", sans-serif;
 }
-
-#requests {
-  min-width: 150px;
+#allUsers{
+  background: #e2e0e0;
+  padding: .5rem;
+  border-radius: .5rem;
+  row-gap: 1rem;
+  display: none;
+}
+#financeUsers,
+#accountsUsers {
+  display: flex;
+  max-width: 200px;
+  overflow-x: scroll;
+  gap: .5rem;
+  /* Hide scrollbar for Webkit browsers */
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
 }
 
-.request {
-  width: 100%;
-  min-height: 20px;
-  background-color: var(--color4);
-  border-radius: 0.25rem;
-  padding: .25rem .5rem;
-  text-align: right;
-  margin-bottom: .25rem;
+#financeUsers::-webkit-scrollbar,
+#accountsUsers::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+.userEle {
+  display: flex;
+  gap: .7rem;
+  background-color: #f5f5f5;
+  padding: .25rem .65rem;
+  border-radius: 2rem;
+  height: fit-content;
+  box-shadow: inset 0px 0px 2px 0px;
+  cursor: context-menu;
+  font-size: .7rem;
+}
+
+.userEle .del {
+  cursor: pointer;
+  opacity: .7;
+  transition: all .2s ease;
+}
+
+.userEle .del:hover {
+  opacity: 1;
+  transform: scale(1.5);
 }
 
 .request .info {
@@ -284,20 +333,23 @@
 }
 
 @media only screen and (max-width:720px) {
-  html{
+  html {
     font-size: 14px;
   }
+
   .header {
     font-size: 1.5rem;
   }
-  .header .logo{
+
+  .header .logo {
     width: 2rem;
     height: 2rem;
   }
+
   .feilds {
     grid-template-columns: 1fr 1fr;
   }
-  
+
 }
 
 @media only screen and (max-width: 450px) {
@@ -365,14 +417,16 @@
   }
 }
 
-@media only screen and (max-width: 360px){
-  html{
+@media only screen and (max-width: 360px) {
+  html {
     font-size: 10px;
   }
-  .header{
+
+  .header {
     font-size: 1.2rem;
   }
-  .header .logo{
+
+  .header .logo {
     width: 1.5rem;
     height: 1.5rem;
   }
