--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -295,8 +295,13 @@
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none; /* For Firefox */
   -ms-overflow-style: none;  /* IE and Edge */
+  scroll-snap-type: x mandatory; 
 }
-
+#financeUsers > div,
+#accountsUsers > div{
+  flex: 0 0 auto;
+  scroll-snap-align: start;
+}
 #financeUsers::-webkit-scrollbar,
 #accountsUsers::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
